# obsidian_notifications

./: .gitignore  Cargo.toml  EXAMPLE-config.toml  EXAMPLE-obsidian_notifications.service  Readme.md  obsidian_notifications.service
src/: main.rs  state.rs
src/bot/: commands.rs  context.rs  destination.rs  mod.rs  send_msgs.rs
src/bot/commands/: get_reminders.rs  mod.rs
src/config/: destination.rs  mod.rs  vault.rs
src/file_scanner/: daily_todo.rs  file_search_config.rs  mod.rs  recent_file_tracker.rs  sync_conflict.rs
src/file_scanner/time_reminder/: mod.rs  model.rs
