[package]
name = "obsidian_notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
regex = "1.10.2"
serde = "1.0.193"
serenity = "0.12.0"
tokio = {version = "1.34.0", features = ["full"]}
toml = "0.8.8"
